fieldx/tests/uncompilable/stable+serde,sync,async-lock/misplaced_subargs.stderr
error: 'doc' has no effect in 'get' context at struct level
 --> tests/uncompilable/misplaced_subargs.rs
  |
  | #[fxstruct(get(doc("not here")))]
  |                ^^^

error: parameter 'post_build' is only supported at struct level
 --> tests/uncompilable/misplaced_subargs.rs
  |
  |     #[fieldx(builder(post_build))]
  |                      ^^^^^^^^^^

error: 'shadow_name' has no effect in 'serde' context at field level
 --> tests/uncompilable/misplaced_subargs.rs
  |
  |     #[fieldx(serde(shadow_name("WontWork"), private))]
  |                    ^^^^^^^^^^^

error: 'private' has no effect in 'serde' context at field level
 --> tests/uncompilable/misplaced_subargs.rs
  |
  |     #[fieldx(serde(shadow_name("WontWork"), private))]
  |                                             ^^^^^^^
